--- a/src/index.html
+++ b/src/index.html
@@ -10689,7 +10689,7 @@
                   id="MY70MXpTrg4krscW"
                   target="_blank"
                   rel="noopener"
-                  href="https://www.dextools.io"
+                  href="https://www.dextools.io/app/en/bnb/pair-explorer/0xComingSoon"
                   style="pointer-events: all"
                   data-interstitial-link=""
                   ><div
@@ -10929,7 +10929,7 @@
                   id="EjC0YtWtA2SIZH8r"
                   target="_blank"
                   rel="noopener"
-                  href="https://x.com/xixi_tron/"
+                  href="https://x.com/ABinanceCat/"
                   style="pointer-events: all"
                   data-interstitial-link=""
                   ><div
@@ -10996,7 +10996,7 @@
                   id="PJP8XwRXJfmSMIpv"
                   target="_blank"
                   rel="noopener"
-                  href="https://t.me/xixi_tron/"
+                  href="https://t.me/abinancecat_portal/"
                   style="pointer-events: all"
                   data-interstitial-link=""
                   ><div
@@ -11063,7 +11063,7 @@
                   id="yCqbaOW8X2Tm1JoQ"
                   target="_blank"
                   rel="noopener"
-                  href="https://dexscreener.com/"
+                  href="https://dexscreener.com/bsc/0xComingSoon/"
                   style="pointer-events: all"
                   data-interstitial-link=""
                   ><div
