--- a/src/index.html
+++ b/src/index.html
@@ -9679,7 +9679,7 @@
                   id="BmsKdh7zCEiuRIzN"
                   target="_blank"
                   rel="noopener"
-                  href="https://raydium.io/swap/?inputMint=sol&outputMint=ComingSoon"
+                  href="https://pancakeswap.finance/swap?outputCurrency=0x1b1c79134645947a1eff5c5111751a719876ae82"
                   style="pointer-events: all"
                   data-interstitial-link=""
                   ><div
@@ -10689,7 +10689,7 @@
                   id="MY70MXpTrg4krscW"
                   target="_blank"
                   rel="noopener"
-                  href="https://www.dextools.io/app/en/bnb/pair-explorer/0xComingSoon"
+                  href="https://www.dextools.io/app/en/bnb/pair-explorer/"
                   style="pointer-events: all"
                   data-interstitial-link=""
                   ><div
@@ -11063,7 +11063,7 @@
                   id="yCqbaOW8X2Tm1JoQ"
                   target="_blank"
                   rel="noopener"
-                  href="https://dexscreener.com/bsc/0xComingSoon/"
+                  href="https://dexscreener.com/bsc//"
                   style="pointer-events: all"
                   data-interstitial-link=""
                   ><div
