--- a/src/index.html
+++ b/src/index.html
@@ -9057,7 +9057,7 @@
                           "
                         >
                           <span id="T6YI1jgmR8dJQ0nF" style="color: #000000"
-                            >CA ; ComingSoon </span
+                            >CA ; 0x1b1c79134645947a1eff5c5111751a719876ae82 </span
                           ><br />
                         </p>
                       </div>
@@ -9108,7 +9108,7 @@
                           "
                         >
                           <span id="Ij6MSvYNTlKiJPtD" style="color: #000000"
-                            >CA ; ComingSoon </span
+                            >CA ; 0x1b1c79134645947a1eff5c5111751a719876ae82 </span
                           ><br />
                         </p>
                       </div>
