--- a/src/index.html
+++ b/src/index.html
@@ -10689,7 +10689,7 @@
                   id="MY70MXpTrg4krscW"
                   target="_blank"
                   rel="noopener"
-                  href="https://www.dextools.io/app/en/bnb/pair-explorer/"
+                  href="https://www.dextools.io/app/en/token/abinancecat?t=1743795946026"
                   style="pointer-events: all"
                   data-interstitial-link=""
                   ><div
@@ -11063,7 +11063,7 @@
                   id="yCqbaOW8X2Tm1JoQ"
                   target="_blank"
                   rel="noopener"
-                  href="https://dexscreener.com/bsc//"
+                  href="https://dexscreener.com/bsc/0x1b1c79134645947a1eff5c5111751a719876ae82"
                   style="pointer-events: all"
                   data-interstitial-link=""
                   ><div
